wp-content/themes/smartbox-theme-custom/stylesheets/hb_styles.css
/* 
    Document   : hb_styles
    Created on : Jun 21, 2013, 6:03:22 PM
    Author     : Mihon
    Description: Our custom styles
*/
@import url(http://fonts.googleapis.com/css?family=Reenie+Beanie);

div#blockRigthOben{
    font-size: 14px;
    border-left-style: dashed;
    border-left-width: thin;
    padding-left: 20px;
    margin-left: 30px;
}

ul#blockRigthBlack{
    font-size: 18px;
    padding-top: 60px;
    padding-left: 10px;
}
ul#blockRigthBlack h3{
    padding-bottom: 15px;
}

div#blockRigthOben h4{
    color: orange;
}

blockquote.block{
font-family: "cambria", sans-serif;
font-weight: 400;
font-size: 19px;
line-height: 1.5em;
margin-left: 40px;
}

i.icon_right{
    padding-left: 8px;
}

p.no_li{
    line-height: 1.5em;
    font-size: 0.9em;
}

.super {
  font-size: 50px;
  font-weight: 900;
  text-align: center;
  line-height: 1;
  margin-bottom: 0;
  text-transform: uppercase;
}

/*stickit css begin*/
body_stickit{
  font-family: 'Reenie Beanie', cursive;
  font-size:80%;
  margin:3em;
  background:#666;
  color:#fff;
}

h2_stickit,p_stickit{
  font-size:80%;
  font-weight:normal;
}
ul_stickit,li_stickit{
  list-style:none;
}
ul_stickit{
  overflow:hidden;
  padding:3em;
}
ul_stickit li_stickit a_stickit{
  text-decoration:none;
  color:#000;
  background:#ffc;
  display:block;
  height:9em;
  width:9em;
  padding:1em;
  -moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
  -webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
  box-shadow: 5px 5px 7px rgba(33,33,33,.7);
  -moz-transition:-moz-transform .15s linear;
  -o-transition:-o-transform .15s linear;
  -webkit-transition:-webkit-transform .15s linear;
}

ul_stickit li_stickit{
  margin:1em;
  float:left;
}

ul_stickit li_stickit h2_stickit{
  font-size:80%;
  font-weight:bold;
  padding-bottom:8px;
}
ul_stickit li_stickit p_stickit{
  font-family: 'Reenie Beanie', cursive;
  font-size:100%;
}
ul_stickit li_stickit a_stickit{
  -webkit-transform: rotate(-6deg);
  -o-transform: rotate(-6deg);
  -moz-transform:rotate(-6deg);
}
ul_stickit li_stickit:nth-child(even) a_stickit{
  -o-transform:rotate(4deg);
  -webkit-transform:rotate(4deg);
  -moz-transform:rotate(4deg);
  position:relative;
  top:5px;
  background:#cfc;
}
ul_stickit li_stickit:nth-child(3n) a_stickit{
  -o-transform:rotate(-3deg);
  -webkit-transform:rotate(-3deg);
  -moz-transform:rotate(-3deg);
  position:relative;
  top:-5px;
  background:#ccf;
}
ul_stickit li_stickit:nth-child(5n) a_stickit{
  -o-transform:rotate(5deg);
  -webkit-transform:rotate(5deg);
  -moz-transform:rotate(5deg);
  position:relative;
  top:-10px;
}
ul_stickit li_stickit a_stickit:hover,ul_stickit li_stickit a_stickit:focus{
  box-shadow:10px 10px 7px rgba(0,0,0,.7);
  -moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);
  -webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
  -webkit-transform: scale(1.25);
  -moz-transform: scale(1.25);
  -o-transform: scale(1.25);
  position:relative;
  z-index:5;
}

ol_stickit{text-align:center;}
ol_stickit li_stickit{display:inline;padding-right:1em;}
ol_stickit li_stickit a_stickit{color:#fff;}
/*stickit css end*/

.logoButtonLink {
        padding: 25.5px 25px 21.5px;
	background: url(../images/domikgrey50x47.png);
}
.logoButtonLink:hover {
        background: url(../images/domiklight50x47.png);
}

.logoButtonLink a {
  font-style: normal;
}

.navbar-inverse .logoButtonLink a {
  color: white;
}
.logoButtonLink2 {
  font-weight: 300;
  font-size: 30px;
  line-height: 30px;
  padding: 25.5px 20px 29.5px;
  margin-top: 0;
  margin-bottom: 0;
  background: url(../images/domikgrey50x47.png);
}
.logoButtonLink2 a {
  font-style: normal;
}

.navbar-inverse .logoButtonLink2 a {
  color: white;
}

h4.infokasten{
    background:#E3FF4A; 
    display: inline; 
    line-height: 3;
    padding:4px 8px;
}

a.infokasten{
    color: #000000;
}

h4.infokasten:hover {
	opacity: 1;
	filter: alpha(opacity=100);
 	-webkit-transition: opacity 1s linear;
}

.super-hero-unit {
    position: relative;
    color: white;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9);
    display: block;
    margin: auto 0;
    text-align: center;
}

blockquote_drops { 
  background : url(../images/bb_quotes.gif) no-repeat top left;
  margin : 15px 0 0 5px;
  padding : 5px 20px 0 25px;
  border-right : 1px dotted #99cc66; 
  border-left : 1px dotted #99cc66; 
  color : #666;
  text-indent : 30px;
}

.ex-pullquote, .pullquote {
   float : right;
   width : 210px;
   border : 0;
   color : #99cc66;
   font-family : georgia, palatino, 'times new roman', serif;
   font-size : 110%;
   font-weight : bold;
   font-style : italic;
   margin : -5px 0 15px 10px;
 }

 .pullquote {
   width : 250px;
   margin : -25px 0 20px 15px;
 }

